fix(forms-select--multiple): fix footer overlapping issue - FRONT-1578  (#1665)

--- a/src/systems/eu/implementations/vanilla/packages/eu-component-form-select/eu-component-form-select.scss
+++ b/src/systems/eu/implementations/vanilla/packages/eu-component-form-select/eu-component-form-select.scss
@@ -220,6 +220,7 @@
       box-sizing: border-box;
       margin-top: $ecl-spacing-xs;
       position: absolute;
+      z-index: $ecl-z-index-dropdown;
     }
 
     .ecl-text-input {
